--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Caso2/nbproject/private/
 /tarea++/tarea++/nbproject/private/
 /Caso2/dist/
+/tarea++/Encriptacion/nbproject/private/
+/tarea++/Encriptacion/build/
