empleados adapter, con el web service mal

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /Caso2/nbproject/private/
 /tarea++/tarea++/nbproject/private/
 /tarea++/tarea++/build/
+/tarea++/JavaApplication2/nbproject/private/
+/tarea++/Empleados/nbproject/private/
+/tarea++/casoEmpleados/nbproject/private/
+/tarea++/casoEmpleados/build/
+/tarea++/casoEmpleados/dist/
