tarea de iterator

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /tarea++/casoEmpleados/nbproject/private/
 /tarea++/casoEmpleados/build/
 /tarea++/casoEmpleados/dist/
+/tarea Iterator/tarea_Iterator/nbproject/private/
