--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /tarea++/casoEmpleados/build/
 /tarea++/casoEmpleados/dist/
 /tarea Iterator/tarea_Iterator/nbproject/private/
+/tarea++/Encriptacion/nbproject/private/
+/tarea Iterator/tarea_Iterator/build/
