La vida es bella... jaja

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 /tarea Iterator/tarea_Iterator/nbproject/private/
 /tarea++/Encriptacion/nbproject/private/
 /tarea Iterator/tarea_Iterator/build/
+/tarea++/SocketConexion/nbproject/private/
+/tarea++/ClienteRedSocial/nbproject/private/
+/API/nbproject/private/
+/API/build/
+/tarea++/ClienteRedSocial/build/
