--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /API/nbproject/private/
 /API/build/
 /tarea++/ClienteRedSocial/build/
+/ProyectoSubastaAPP/build/
+/ProyectoSubastaAPP/nbproject/private/
+/SubastaApp/nbproject/private/
+/ProyectoSubastaAPP/dist/
