cambios api y red social

--- a/ClienteRedSocial/nbproject/project.properties
+++ b/ClienteRedSocial/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.API.jar}
+    ${reference.API.jar}:\
+    ${reference.API-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,6 +62,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.API=../../API
+project.API-1=../API
+reference.API-1.jar=${project.API-1}/dist/API.jar
 reference.API.jar=${project.API}/dist/API.jar
 run.classpath=\
     ${javac.classpath}:\
